[package]
name = "cs240-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"

[[bin]]
name = "client"
path = "src/client/bin/client.rs"

[[bin]]
name = "server"
path = "src/server/bin/server.rs"